--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ a{
 
 
 .container{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     
 }
 
@@ -41,17 +41,7 @@ a{
     position: relative;
 }
 
-.menu::after{
-    content: '';
-    position: absolute;
-    width: 32px;
-    height: 32px;
-    background: firebrick;
-    top: -5px;
-    left: -5px;
-    border-radius: 50%;
-    display: none;
-}
+
 
 .menu:hover .menu::after{
     display: block;
@@ -292,6 +282,7 @@ a{
     }
     .inputNhap{
         padding:6px 5px;
+        min-width: 40px;
     }
     .btn-Search{
         font-size: 11px;
