--- a/style.css
+++ b/style.css
@@ -26,8 +26,9 @@ a{
 
 .container{
     width: 100%;
-    height: 100%;
-    
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .header{
@@ -187,10 +188,13 @@ a{
 /* footer  Main */
 
 .footerMain{
-    width: 100vw;
+    width: 100%;
     background-color: #F2F2F2;
-    position: absolute;
-    bottom: 0;
+    margin-top: 180px;
+    
+}
+.footerLanguage{
+    
 }
 .languageFooter{
     width: 100vw;
